# multirobot_coordination

./: CMakeLists.txt  package.xml
launch/: amcl_ns.launch  bringup_state_pup_ns.launch  gmapping_ns.launch  launch.launch  launch_v2.launch  launch_v3.launch  movebase_ns.launch  movebase_test.launch  namespace.launch  slam_movebase.launch
rviz/: multirobot_coordination.rviz
scripts/: coordinator.py
