<?xml version="1.0"?>
<package format="2">
  <name>multirobot_coordination</name>
  <version>1.0.0</version>
  <description>The multirobot_coordination package</description>

  <maintainer email="emre.oencue@hsbi.de">emre</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/multirobot_coordination</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>

  <build_depend>geometry_msgs.msg</build_depend>
  <build_export_depend>geometry_msgs.msg</build_export_depend>
  <exec_depend>geometry_msgs.msg</exec_depend>

  <build_depend>tf</build_depend>
  <build_export_depend>tf</build_export_depend>
  <exec_depend>tf</exec_depend>

  <build_depend>math</build_depend>
  <build_export_depend>math</build_export_depend>
  <exec_depend>math</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
